Signed-off-by: NALPAKD <41223678+NALPAKD@users.noreply.github.com>

--- a/gallery3.html
+++ b/gallery3.html
@@ -29,11 +29,13 @@
   <h1>Gallery 3 cipher</h1>
   <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-				<li><a href="parents.html">Parents</a></li>
+                <li><a href="parents.html">Parents</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="puppies.html">Puppies for Sale</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="https://puppybydesign.com/contact-us">Contact</a></li>
+				<li><a href="https://puppybydesign.com/shop">Shop</a></li>
+				<li><a href="https://puppybydesign.com/m/login?r=%2Fm%2Faccount">Log In</a></li>
+				<li><a href="https://puppybydesign.com/deposit-and-payments">Payments</a></li>
 				
     </ul>
   </nav>
