--- a/parents.html
+++ b/parents.html
@@ -12,11 +12,15 @@
   <h1>Meet the Parents</h1>
 		<nav>
             <ul>
-                <li><a href="index.html">home</a></li>
-				<li><a href="parents.html">parents</a></li>
-                <li><a href="about.html">about Us</a></li>
-                <li><a href="puppies.html">puppies for Sale</a></li>
-                <li><a href="contact.html">contact</a></li>
+            <li><a href="index.html">Home</a></li>
+				<li><a href="parents.html">Parents</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="puppies.html">Puppies for Sale</a></li>
+                <li><a href="https://puppybydesign.com/contact-us">Contact</a></li>
+				<li><a href="https://puppybydesign.com/shop">Shop</a></li>
+				<li><a href="https://puppybydesign.com/m/login?r=%2Fm%2Faccount">Log In</a></li>
+				<li><a href="https://puppybydesign.com/deposit-and-payments">Payments</a></li>
+				
     </ul>
   </nav>
 </header>
