Signed-off-by: NALPAKD <41223678+NALPAKD@users.noreply.github.com>

--- a/about.html
+++ b/about.html
@@ -17,15 +17,20 @@
                 <li><a href="https://puppybydesign.com/contact-us">Contact</a></li>
 				<li><a href="https://puppybydesign.com/shop">Shop</a></li>
 				<li><a href="https://puppybydesign.com/m/login?r=%2Fm%2Faccount">Log In</a></li>
-				<li><a href="https://puppybydesign.com/deposit-and-payments">Payments</a></li>
+<li><a href="https://puppybydesign.com/deposit-and-payments">Payments</a></li>
 				
         </nav>
     </header>
     <main class="cover-image3">
-        <section>
-            <h2>Who We Are</h2>
-            <p>Find your perfect puppy here!</p>
-        </section>
+      <section>
+            <h2>Meet The Breeder&nbsp;</h2>
+          <p>I'm the breeder behind Puppy by Design located in Bakersfield, CA. I offer top-quality puppies with a focus on health, form, and function. I believe quality is more important than quantity. I provide my puppies with a safe, clean, and enriching environment where they can grow and learn about the world until they are ready to venture out and experience life with their forever families!</p>
+          <p>&nbsp;My dogs are my passion, and I can't imagine spending life without them. I am dedicated to achieving excellence and healthy family pets, and I am always working to further my education so that I can continue to improve my breeding program as well as share my knowledge with others!</p>
+          <p>&nbsp; I spend lots of time with my puppies and enjoy training and socializing them so that they will be best prepared for their new lives with their forever families. While I know that not every pup in each litter will grow up to become a service dog, I am confident that each one will become a treasured family member!</p>
+          <p>&nbsp;Kassidy has been certified by Good Dog's screening team for responsible and trusted breeding practices. When you're ready to reach out, feel free to ask any questions about the breed, their program, or specific puppies. You'll also have the chance to share a bit about yourself and what you're looking for in a new companion. Together, you'll choose the puppy that's right for you, stay in touch with regular updates, and plan how to bring your new puppy home.</p>
+        <h1><a href="included.html">Click Here to see Whats Included</a>&nbsp;</h1>
+<h1>&nbsp; </h1>
+</section>
     </main>
     
 </body>
