Signed-off-by: NALPAKD <41223678+NALPAKD@users.noreply.github.com>

--- a/included.html
+++ b/included.html
@@ -18,7 +18,7 @@
     background-image: url('images/bk.jpg');
     background-size: cover;
     background-position: center;
-    height: 160vh; /* Full viewport height */
+    height: 200vh; /* Full viewport height */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,7 +30,7 @@
             display: flex;
             gap: 20px;
 			border-radius: 30px;
-			background-color: lightblue;
+			background-color: mediumpurple;
         }
 
         .column {
