Signed-off-by: NALPAKD <41223678+NALPAKD@users.noreply.github.com>

--- a/included.html
+++ b/included.html
@@ -14,7 +14,7 @@
             margin: 20px;
         }
 		 
-	  .cover-imageZ {
+	  .cover-imagez {
     background-image: url('images/bk.jpg');
     background-size: cover;
     background-position: center;
@@ -85,7 +85,7 @@
 				
         </nav>
     </header>
-    <main class="cover-imageZ">
+    <main class="cover-imagez">
       <section> 
    		 <div class="container">
         	<div class="column">
