Signed-off-by: NALPAKD <41223678+NALPAKD@users.noreply.github.com>

--- a/included.html
+++ b/included.html
@@ -15,7 +15,7 @@
         }
 		 
 	  .cover-imagez {
-    background-image: url('images/bk.jpg');
+    background-image: url('images/bk1.webp');
     background-size: cover;
     background-position: center;
     height: 200vh; /* Full viewport height */
