--- a/included.html
+++ b/included.html
@@ -82,6 +82,7 @@
 				<li><a href="https://puppybydesign.com/shop">Shop</a></li>
 				<li><a href="https://puppybydesign.com/m/login?r=%2Fm%2Faccount">Log In</a></li>
 				<li><a href="https://puppybydesign.com/deposit-and-payments">Payments</a></li>
+				<li><a href="random.html">Random Pictures</a></li>
 				
         </nav>
     </header>
